--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.16.0",
+    "@blocknote/mantine": "^0.16.0",
+    "@blocknote/react": "^0.16.0",
     "@clerk/clerk-react": "^5.11.0",
     "@clerk/nextjs": "^5.7.1",
     "@edgestore/react": "^0.2.2",
