--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/nextjs": "^5.7.1",
     "@edgestore/react": "^0.2.2",
     "@edgestore/server": "^0.2.2",
+    "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -24,12 +25,18 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tabler/icons-react": "^3.19.0",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "convex": "^1.16.3",
     "emoji-picker-react": "^4.12.0",
+    "framer-motion": "^11.11.1",
     "lucide-react": "^0.447.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -37,7 +44,7 @@
     "react-dropzone": "^14.2.9",
     "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8",
