--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,12 @@
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
     "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off"
-  }
+    "@next/next/no-page-custom-font": "off",
+    "no-unused-vars":"off",
+    "no-empty-object-type": "off" ,
+  },
+  "eslint.options": {
+  "@typescript-eslint/no-unused-vars": "off",
+  "@typescript-eslint/no-empty-object-type" : "off"
+}
 }
